--- a/src/views/products/cart.ejs
+++ b/src/views/products/cart.ejs
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('./partials/head.ejs') %>
+<%- include('../partials/head.ejs') %>
 
 <body>
     <!-- NAV -->
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
     <!-- MAIN -->
     <main>
         <h1>Carrito de compras</h1>
         <section>
-            <article>
+            <article class="post">
                 <img src="./images/products/Funda Para Notebook Gadnic.jpg" alt="Funda Estuche Para Notebook Gadnic 14 Pulgadas Color Negro">
                 <div>
                     <h3>Funda Estuche Para Notebook Gadnic 14 Pulgadas Color Negro</h3>
@@ -36,7 +36,7 @@
         </section>
     </main>
     <!-- FOOTER -->
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 
 </html>
