--- a/src/views/products/index.ejs
+++ b/src/views/products/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <%- include('./partials/head.ejs') %>
+    <%- include('../partials/head.ejs') %>
 
 <body>
     <!-- NAV -->
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
     <!-- MAIN -->
     <main>
         <section id="destacados">
@@ -148,7 +148,7 @@
             </section>
         </section>
     </main>
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 
 </html>
