--- a/public/css/general.css
+++ b/public/css/general.css
@@ -10,10 +10,18 @@ nav{
     background-color: #E3B5A4;
     justify-content: space-between;
     align-items: center;
+    height: 4rem;
+}
+
+#find{
+    width: 14rem;
+    height: 2.5rem;
 }
 
 .personal{
     display: flex;
+    justify-content: space-between;
+    height: 4rem;
 }
 
 .usu{
@@ -21,22 +29,17 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-}
-
-.menu li{
-    display: flex;
-    background-color: #A80874;
-    align-items: center;
-    justify-content: center;
-    padding-left: 1.2rem;
-    padding-right: 1.2rem;
+    border: 0.1rem solid brown;
+    border-radius: 20%;
+    margin: auto;
+    padding: 0.3rem;
+    margin-left: 0.3rem;
+    margin-right: 0.3rem;
 }
 
 a{
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 footer{
