--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     
-    <%- include('./partials/head.ejs') %>
+    <%- include('../partials/head.ejs') %>
 
 <body>
     <!-- Nav -->
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
     <!-- MAIN -->
     <main>
         <section>
@@ -34,6 +34,6 @@
         </section>
     </main>
     <!-- FOOTER -->
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 </html>
