--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('./partials/head.ejs') %>
+<%- include('../partials/head.ejs') %>
 
 <body>
     <!-- NAV -->
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
     <!-- MAIN -->
     <main>
         <section id="formulario">
