--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- HEAD -->
-    <%- include('./partials/head.ejs') %>
+    <%- include('../partials/head.ejs') %>
 
 <body>
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
     <!-- MAIN -->
     <main>
         <section id="formulario">
