--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixel Shop</title>
+    <title><%= title %></title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
