--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav>
     <div class="icon-container">
-        <a href="/"><img src="" alt="logo de la pagina"></a>
+        <a href="/products"><img src="" alt="logo de la pagina"></a>
     </div>
     <div>
         <input type="search" name="buscar" placeholder="Buscar" id="find">
@@ -8,7 +8,7 @@
     <div>
         <ul class="personal">
             <li class="icon-container">
-                <a href="/products/cart"><img src="./images/design/iconos/carro.png" alt="carrito de compras"></a></li>
+                <a href="/products/cart"><img src="/public/images/design/iconos/carro.png" alt="carrito de compras"></a></li>
             <li class="usu">
                 <a href="/users/login">Ingresar</a>
             </li>
