--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -41,6 +41,14 @@
                 </div>
 
                 <div>
+                    <label for="rol">Rol:</label>
+                    <select name="rol" id="rol">
+                        <option value="admin">admin</option>
+                        <option value="cliente">cliente</option>
+                    </select>
+                </div>
+
+                <div>
                     <input class="enviar" type="submit" value="Registrarse">
                 </div>
             </form>
