--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,39 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-    <%- include('../partials/head.ejs') %>
 
-<body>
+<%- include('../partials/head.ejs') %>
+
+  <body>
     <!-- Nav -->
     <%- include('../partials/nav.ejs') %>
-    <!-- MAIN -->
-    <main>
+      <!-- MAIN -->
+      <main>
         <section>
-          <h2>Funda Estuche Para Notebook Gadnic 14 Pulgadas Color Negro</h2>
-          <div>
-            <img src="./images/products/Funda Para Notebook Gadnic.jpg" alt="Funda Estuche Para Notebook Gadnic 14 Pulgadas Color Negro">
+          <h2>
+            <%= product.name %>
+          </h2>
+          <div class="img-container">
+            <img src="<%= product.image %>" alt="<%= product.name %>">
           </div>
           <div>
-            <h3>$13.999</h3>
-            <h3>Parque 9 de Julio</h3>
-            <h3>Nombre del vendedor</h3>
-            <label for="cant">Cantidad</label>
-            <input type="number" name="cant" id="cant" min="1" max="5" placeholder="1-5">
+            <h3>
+              <%= product.price %>
+            </h3>
             <button type="submit" href="./cart.html">Agregar al carrito</button>
           </div>
         </section>
         <section>
-            <h3>Detalle del producto</h3>
-            <p>Funda Para Notebook Gadnic 14” a 15,6” Anti Golpes Lavable Super Resistente</p> 
-            <p>funda estuche para notebook Gadnic de 14 pulgadas en color negro es un accesorio esencial diseñado para proteger tu computadora portátil de los rigores diarios. Su función principal es resguardar tu dispositivo contra golpes, rayones y polvo, prolongando así su vida útil. Además, facilita el transporte seguro y cómodo de tu notebook, ya sea en la mano o dentro de otro bolso. Dependiendo del modelo, esta funda puede incluir compartimentos adicionales para organizar tus accesorios, como cargadores y cables, lo que la convierte en una solución práctica para el día a día. El color negro le confiere un aspecto elegante y profesional, adecuado para cualquier entorno. Fabricada con materiales como neopreno o tela Oxford, ofrece diferentes niveles de protección y resistencia. Su cierre seguro evita que la notebook se deslice accidentalmente, brindándote tranquilidad durante el transporte. En resumen, la funda estuche Gadnic es una opción confiable y funcional para mantener tu notebook de 14 pulgadas protegida y lista para usar en cualquier momento y lugar.</p>
+          <h3>Detalle del producto</h3>
+          <p>Estado: <%= product.status %>
+          </p>
+          <p>Descripcion: <%= product.description %>
+          </p>
         </section>
         <section>
-            <h3>Metodos de pago</h3>
-            <h4>tarjeta</h4>
-            <h4>efectivo</h4>
+          <h3>Metodos de pago</h3>
+          <h4>tarjeta</h4>
+          <h4>efectivo</h4>
         </section>
-    </main>
-    <!-- FOOTER -->
-    <%- include('../partials/footer.ejs') %>
-</body>
+        <section>
+          <div class="enviar">
+            <a href="/products/<%= product.id %>/edit">Editar</a>
+          </div>
+          <form action="/products/<%= product.id %>?_method=DELETE" method="post">
+            <button type="submit"
+              onclick="return confirm('¿Estás seguro de que quieres eliminar este producto?')" class="enviar">Eliminar</button>
+          </form>
+        </section>
+      </main>
+      <!-- FOOTER -->
+      <%- include('../partials/footer.ejs') %>
+  </body>
+
 </html>
